--- a/force-app/main/default/classes/myclass.cls
+++ b/force-app/main/default/classes/myclass.cls
@@ -3,13 +3,13 @@ public with sharing class myclass {
         System.debug('=======mGit==========');
 
         System.debug('This');
-
+        System.debug('Th');
 
   
 
          
 
-        
+
         
 
 
